--- a/react-context-hook/booklist/package.json
+++ b/react-context-hook/booklist/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hook-10-minutes",
+  "name": "booklist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
