--- a/varios-projects/punchit-frontend/package.json
+++ b/varios-projects/punchit-frontend/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.5",
     "@types/react": "^17.0.3",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.6.0",
@@ -17,6 +18,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.10.6",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
   },
