--- a/varios-projects/punchit-frontend/package.json
+++ b/varios-projects/punchit-frontend/package.json
@@ -12,14 +12,17 @@
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.8",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.10.6",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
   },
