--- a/mini-tutorials/typescript-crud-back-front-1/back/package.json
+++ b/mini-tutorials/typescript-crud-back-front-1/back/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.2",
     "typescript": "^4.2.3"
