--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@types/styled-components": "^5.1.9",
+    "dotenv": "^8.2.0",
+    "react-query": "^3.13.5",
+    "styled-components": "^5.2.3"
   }
 }
