--- a/mini-tutorials/fatz-api/back/.env
+++ b/mini-tutorials/fatz-api/back/.env
@@ -1,4 +1,4 @@
-MONGO_DATABASE="test"
+MONGO_DATABASE="Test"
 MONGO_USER="admin"
 MONGO_PASSWORD="manu1054"
 MONGO_HOST="cluster0.rvi4d.mongodb.net"
