--- a/package.json
+++ b/package.json
@@ -2,9 +2,22 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@types/axios": "^0.14.0",
+    "@types/react": "^17.0.4",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "react-query": "^3.13.5",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.3"
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.16",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0"
   }
 }
