--- a/nicolas-schurman/prueba_next2/package.json
+++ b/nicolas-schurman/prueba_next2/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
+
   },
   "dependencies": {
     "next": "12.1.5",
@@ -15,8 +17,11 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "jest": "^27.5.1"
   }
 }
