--- a/mini-tutorials/acortador-url/package.json
+++ b/mini-tutorials/acortador-url/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tutorial-modal-project",
+  "name": "acortador-url",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sass": "^1.52.1"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
