--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.16",
