--- a/challengers/todo-stream/package.json
+++ b/challengers/todo-stream/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "cypress open"
   },
   "dependencies": {
     "nes.css": "^2.3.0",
@@ -17,6 +18,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "cypress": "^10.11.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
